--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "next": "^14.0.0",
+    "axios": "^1.6.0",
+    "next": "^14.2.29",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.6.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.43.0",
+    "@types/node": "20.19.27",
+    "@types/react": "18.3.27",
     "eslint": "^8.54.0",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.2.29",
+    "typescript": "^5.3.3"
   }
 }
