--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -46,6 +46,7 @@ jobs:
     - name: Build & Push Frontend Image
       run: |
         docker build \
+          --no-cache \
           --build-arg NEXT_PUBLIC_API_URL=/api \
           -t frontend ./frontend
         docker tag frontend:latest \
@@ -53,9 +54,16 @@ jobs:
         docker push \
           $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/frontend:${{ github.sha }}
 
+
     # ----------------------------
     # Terraform Deploy
     # ----------------------------
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
+      with:
+        terraform_version: 1.6.6
+
     - name: Terraform Init & Apply
       run: |
         cd terraform
@@ -63,3 +71,5 @@ jobs:
         terraform apply -auto-approve \
           -var="frontend_image=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/frontend:${{ github.sha }}" \
           -var="backend_image=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/backend:${{ github.sha }}"
+
+
