--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -36,8 +36,9 @@ jobs:
         python -m venv venv
         source venv/bin/activate
         pip install -r requirements.txt
+        export PYTHONPATH=$PWD
         pytest
-        
+    
         
     - name: Run Frontend E2E Tests
       run: |
