fixed issue with test cases

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "next": "^14.0.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "eslint": "^8.54.0",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "@playwright/test": "^1.41.0"
   }
 }
