--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.0",
+    "@types/node": "^20.11.0",
     "@playwright/test": "^1.41.0"
   }
 }
