--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,10 @@
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.0",
     "@types/node": "^20.11.0",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@playwright/test": "^1.41.0"
   }
 }
+
+
