fixed issue token

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -101,6 +101,10 @@ name: Multi-Cloud CI/CD (AWS + GCP)
 on:
   push:
     branches: [ main ]
+    
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   build-push-deploy:
