--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -151,6 +151,10 @@ jobs:
     - name: Setup gcloud
       uses: google-github-actions/setup-gcloud@v2
 
+
+    - name: Set GCP project
+      run: |
+        gcloud config set project $GCP_PROJECT_ID
     # ----------------------------
     # RESET DOCKER AUTH (ONCE)
     # ----------------------------
